modules/networking/main.tf
/*====
The VPC
======*/

resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = merge({
    Name        = "${var.project_name}-${var.env}-vpc"
    Project     = var.project_name
  }, var.tags)
}

/*====
Subnets
======*/
/* Internet gateway for the public subnet */
resource "aws_internet_gateway" "ig" {
  vpc_id = aws_vpc.vpc.id

  tags = merge({
    Name        = "${var.project_name}-${var.env}-igw"
    Project     = var.project_name
  }, var.tags)
}


/* Elastic IP for NAT */
resource "aws_eip" "nat_eip" {
  vpc        = true
  depends_on = [aws_internet_gateway.ig]
}

/* NAT */
resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = element(aws_subnet.public_subnet.*.id, 0)
  #depends_on    = [aws_internet_gateway.ig]

  tags = merge({
    Name        = "${var.project_name}-${var.env}-${var.availability_zones[0]}-nat"
    Project     = var.project_name
  }, var.tags)
}

/* Public subnet */
resource "aws_subnet" "public_subnet" {
  vpc_id                  = aws_vpc.vpc.id
  count                   = length(var.public_subnets_cidr)
  cidr_block              = element(var.public_subnets_cidr, count.index)
  availability_zone       = element(var.availability_zones, count.index)
  map_public_ip_on_launch = true

  tags = merge({
    Name        = "${var.project_name}-${var.env}-${element(var.availability_zones, count.index)}-public-subnet"
    Project     = var.project_name
  }, var.tags)
}

/* Private subnet */
resource "aws_subnet" "private_subnet" {
  vpc_id                  = aws_vpc.vpc.id
  count                   = length(var.private_subnets_cidr)
  cidr_block              = element(var.private_subnets_cidr, count.index)
  availability_zone       = element(var.availability_zones, count.index)
  map_public_ip_on_launch = false

  tags = merge({
    Name        = "${var.project_name}-${var.env}-${element(var.availability_zones, count.index)}-private-subnet"
    Project     = var.project_name
  }, var.tags)
}

/* Routing table for private subnet */
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.vpc.id

  tags = merge({
    Name        = "${var.project_name}-${var.env}-private-route-table"
    Project     = var.project_name
  }, var.tags)
}

/* Routing table for public subnet */
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.vpc.id

  tags = merge({
    Name        = "${var.project_name}-${var.env}-public-route-table"
    Project     = var.project_name
  }, var.tags)
}

resource "aws_route" "public_internet_gateway" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.ig.id
}

resource "aws_route" "private_nat_gateway" {
  route_table_id         = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat.id
}

/* Route table associations */
resource "aws_route_table_association" "public" {
  count          = length("${var.public_subnets_cidr}")
  subnet_id      = element(aws_subnet.public_subnet.*.id, count.index)
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
  count          = length("${var.private_subnets_cidr}")
  subnet_id      = element(aws_subnet.private_subnet.*.id, count.index)
  route_table_id = aws_route_table.private.id
}

/*====
VPC's Default Security Group
======*/
resource "aws_security_group" "default" {
  name        = "${var.project_name}-${var.env}-default-sg"
  description = "Default security group to allow inbound/outbound from the VPC"
  vpc_id      = aws_vpc.vpc.id
  #depends_on  = [aws_vpc.vpc]

  tags = merge({
    Project     = var.project_name
  }, var.tags)
}

resource "aws_security_group_rule" "ingress" {
  description = "ICMP default rule for pinging"
  type      = "ingress"
  from_port = "8"
  to_port   = "8"
  protocol  = "icmp"
  security_group_id = aws_security_group.default.id
  source_security_group_id = aws_security_group.default.id
  lifecycle {
    # Necessary if changing 'name' or 'name_prefix' properties.
    create_before_destroy = true
  }
}

resource "aws_security_group_rule" "egress" {
  description = "all output for cidr 0.0.0.0"
  type        = "egress"
  from_port   = 0
  to_port     = 0
  protocol    = "-1"
  security_group_id = aws_security_group.default.id
  cidr_blocks = ["0.0.0.0/0"]
  lifecycle {
    # Necessary if changing 'name' or 'name_prefix' properties.
    create_before_destroy = true
  }
}
